# gps

./: .gitignore  .toto.c.swp  CMakeLists.txt  Makefile  README.md  a.out  generate.sh  libft  psy  push_swap
ft_printf/src/: ft_memalloc.c
include/: .push_swap.h.swp  push_swap.h
src/: .init.c.swp  .render.c.swp  init.c  list.c  main.c  ope.c  qs_tools.c  render.c  render_2.c  renren.c
